work in progress

--- a/src/pages/home.f7.html
+++ b/src/pages/home.f7.html
@@ -25,6 +25,13 @@
           </div>
           <div id="arena-grid"></div>
           <div id="analysis"></div>
+          <div id="legend">
+            <h3 style="margin-left: 710px;">Legend:</h3>
+            <i style="margin-left: 130px;"class="plain-field material-icons drone"></i><span>Drone</span><br>
+            <i style="margin-left: 130px;"class="package-field material-icons package"></i><span>Package to be picked up</span><br>
+            <i style="margin-left: 130px;"class="target-field material-icons target"></i><span>Delivery destination</span><br>
+            <i style="margin-left: 130px;"class="material-icons charger"></i><span>Charge station</span><br>
+          </div>
           <div class="controls">
               <a class="button button-fill restart-button">Restart</a>
           </div>
