--- a/src/pages/home.f7.html
+++ b/src/pages/home.f7.html
@@ -3,19 +3,19 @@
     <!-- Top Navbar -->
     <div class="navbar">
       <div class="navbar-inner">
-        <div class="title sliding">Explainable UAV Simulation</div>
+        <div class="title sliding">Drone Delivery Simulation</div>
         <div class="title-large">
-          <div class="title-large-text">Explainable UAV Simulation</div>
+          <div class="title-large-text">Drone Delivery Simulation</div>
         </div>
       </div>
     </div>
     <!-- Toolbar-->
-    <!-- <div class="toolbar toolbar-bottom">
+    <div class="toolbar toolbar-bottom">
       <div class="toolbar-inner">
        <a href="https://people.cs.umu.se/tkampik/" class="link external" target="_blank">Timotheus Kampik</a>
         <a href="https://www.umu.se/" class="link external" target="_blank">Umeå University</a>
       </div>
-    </div>-->
+    </div>
     <!-- Scrollable page content-->
     <div class="page-content">
       <div class="block">
