--- a/src/pages/home.f7.html
+++ b/src/pages/home.f7.html
@@ -56,8 +56,8 @@
               <td>
                 <select style="max-width: 100px;" name="modes" id="mode-select">
                   <option value="basic">Unfiltered</option>
-                  <option value="filter">Dynamic filter</option>
-                  <option value="cont">Dynamic filter and contrastive alerts</option>
+                  <option value="filter">Adaptive filter</option>
+                  <option value="cont">Adaptive filter and contrastive alerts</option>
               </select>
               <select style="background-color: transparent; cursor: none;"><option value="unfiltered">Dynamic filter an contrastive</option></select>
               </td>
